--- a/env.example
+++ b/env.example
@@ -1,4 +1,3 @@
-# App
 PORT=3000
 NODE_ENV=development
 
@@ -9,21 +8,24 @@ CORS_ORIGINS=
 HELMET_CSP_ENABLED=false
 
 # Tokens (JWT interno assinado + JWE criptografado)
-JWT_SECRET=troque-este-segredo-com-no-minimo-32-caracteres
-JWE_SECRET=troque-este-segredo-jwe-com-no-minimo-32-caracteres
+JWT_SECRET=troque-este-segredo
+JWE_SECRET=troque-este-segredo-jwe
 JWT_EXPIRES_IN_SECONDS=900
 REFRESH_EXPIRES_IN_SECONDS=604800
 
-# JWT claims de segurança (recomendado; obrigatório em produção)
-TOKEN_ISSUER=secure-rbac-auth-api-bnc
-TOKEN_AUDIENCE=secure-rbac-auth-api-bnc
-
 # SQL Server (Docker Compose)
+# O docker-compose.yml usa DB_NAME/DB_PASSWORD para montar o DATABASE_URL interno.
 DB_NAME=secure_rbac_auth
 DB_PASSWORD=YourStrong!Passw0rd
+
+# SQL Server (local - opcional)
+# Se você rodar a API fora do Docker e quiser apontar para um SQL Server local,
+# você pode definir DATABASE_URL manualmente (senão, use o docker compose).
+DATABASE_URL=sqlserver://localhost:1433;database=secure_rbac_auth;user=sa;password=YourStrong!Passw0rd;encrypt=true;trustServerCertificate=true
 
 # Seed (credenciais para avaliação)
 SEED_ADMIN_EMAIL=admin@local.test
 SEED_ADMIN_PASSWORD=Admin@123
+
 SEED_USER_EMAIL=user@local.test
 SEED_USER_PASSWORD=User@123
