--- a/env.example
+++ b/env.example
@@ -7,11 +7,20 @@ CORS_ORIGINS=
 # Helmet CSP (true/false). Em API pura, CSP costuma ser opcional.
 HELMET_CSP_ENABLED=false
 
+# Swagger (OpenAPI)
+# Em produção, recomenda-se desabilitar ou proteger o endpoint.
+SWAGGER_ENABLED=true
+
 # Tokens (JWT interno assinado + JWE criptografado)
 JWT_SECRET=troque-este-segredo
 JWE_SECRET=troque-este-segredo-jwe
 JWT_EXPIRES_IN_SECONDS=900
 REFRESH_EXPIRES_IN_SECONDS=604800
+
+# Tokens (issuer/audience)
+# Em produção, estes valores são obrigatórios.
+TOKEN_ISSUER=secure-rbac-auth-api-bnc
+TOKEN_AUDIENCE=secure-rbac-auth-api-bnc
 
 # SQL Server (Docker Compose)
 # O docker-compose.yml usa DB_NAME/DB_PASSWORD para montar o DATABASE_URL interno.
